--- a/src/tests/videosourcefactory/CMakeLists.txt
+++ b/src/tests/videosourcefactory/CMakeLists.txt
@@ -3,3 +3,6 @@ ADD_EXECUTABLE(
     ${VIDEO_SOURCE_FACTORY_LEAK_CHECKER}
     ${CMAKE_SOURCE_DIR}/tests/videosourcefactory/leak_checker.cpp
 )
+TARGET_LINK_LIBRARIES(
+    ${VIDEO_SOURCE_FACTORY_LEAK_CHECKER} ${LIBS} ${NAME}
+)
