Issue #42: added new stages that will possibly replace existing ones for clarity

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,9 @@ before_script:
   - export BOOST_163_ROOT_DIR="/home/gitlab-runner/environments/giftgrab/boost163"
 
 stages:
+  - offline
+  - device-cmake
+  - device-pip
   - install
   - test_cmake
   - test_pypi
