Issue #42: passing source and scratch dir envvars to tox

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,10 @@ envlist = py27,py35
 skipsdist = True
 
 [testenv]
-changedir = build
+passenv =
+    GiftGrab_SOURCE_DIR
+    SCRATCH_DIR
 commands =
     python --version
+    echo $GiftGrab_SOURCE_DIR
+    echo $SCRATCH_DIR
