--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,8 @@ envlist = py27,py35
 skipsdist = True
 
 [testenv]
+whitelist_externals =
+    echo
 passenv =
     GiftGrab_SOURCE_DIR
     SCRATCH_DIR
