Issue #42: fixed use of tox syntax to access envvars

--- a/tox.ini
+++ b/tox.ini
@@ -10,5 +10,5 @@ passenv =
     SCRATCH_DIR
 commands =
     python --version
-    echo $GiftGrab_SOURCE_DIR
-    echo $SCRATCH_DIR
+    echo {env:GiftGrab_SOURCE_DIR}
+    echo {env:SCRATCH_DIR}
