Issue #42: composing a custom build dir associated with envname in tox

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,10 @@ whitelist_externals =
 passenv =
     GiftGrab_SOURCE_DIR
     SCRATCH_DIR
+setenv =
+    GiftGrab_BUILD_DIR = {env:SCRATCH_DIR}/build/{envname}
 commands =
     python --version
     echo {env:GiftGrab_SOURCE_DIR}
     echo {env:SCRATCH_DIR}
+    echo {env:GiftGrab_BUILD_DIR}
