--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,8 @@ skipsdist = True
 [testenv]
 whitelist_externals =
     echo
+    mkdir
+    cd
 passenv =
     GiftGrab_SOURCE_DIR
     SCRATCH_DIR
@@ -15,3 +17,5 @@ commands =
     echo {env:GiftGrab_SOURCE_DIR}
     echo {env:SCRATCH_DIR}
     echo {env:GiftGrab_BUILD_DIR}
+    mkdir -p {env:GiftGrab_BUILD_DIR}
+    cd {env:GiftGrab_BUILD_DIR}
