--- a/tox.ini
+++ b/tox.ini
@@ -5,17 +5,14 @@ skipsdist = True
 [testenv]
 whitelist_externals =
     echo
-    mkdir
-    cd
 passenv =
     GiftGrab_SOURCE_DIR
     SCRATCH_DIR
 setenv =
     GiftGrab_BUILD_DIR = {env:SCRATCH_DIR}/build/{envname}
+changedir = {env:GiftGrab_BUILD_DIR}
 commands =
     python --version
     echo {env:GiftGrab_SOURCE_DIR}
     echo {env:SCRATCH_DIR}
     echo {env:GiftGrab_BUILD_DIR}
-    mkdir -p {env:GiftGrab_BUILD_DIR}
-    cd {env:GiftGrab_BUILD_DIR}
