Issue #42: specified pytest as a dep in tox

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,8 @@ passenv =
 setenv =
     GiftGrab_BUILD_DIR = {env:SCRATCH_DIR}/build/{envname}
 changedir = {env:GiftGrab_BUILD_DIR}
+deps =
+    pytest
 commands =
     python --version
     echo {env:GiftGrab_SOURCE_DIR}
