--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,8 @@ skipsdist = True
 [testenv]
 whitelist_externals =
     echo
+    cmake
+    make
 passenv =
     GiftGrab_SOURCE_DIR
     SCRATCH_DIR
