Issue #42: calling exit_on_fail on a separate line to avoid confusing tox

--- a/tox.ini
+++ b/tox.ini
@@ -23,4 +23,5 @@ commands =
     echo {env:GiftGrab_BUILD_DIR}
     ; bare-bones build
     cmake -D CMAKE_INSTALL_PREFIX={env:INSTALL_DIR} {env:GiftGrab_SOURCE_DIR}
-    make -j; exit_on_fail
+    make -j
+    exit_on_fail
