Issue #42: printing pytest version for testing

--- a/tox.ini
+++ b/tox.ini
@@ -24,3 +24,4 @@ commands =
     ; bare-bones build
     cmake -D CMAKE_INSTALL_PREFIX={env:INSTALL_DIR} {env:GiftGrab_SOURCE_DIR}
     make -j
+    pytest --version
