Issue #42: copied CI script up to HEVC support to see if ctest works

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ whitelist_externals =
     echo
     cmake
     make
+    ctest
 passenv =
     GiftGrab_SOURCE_DIR
     SCRATCH_DIR
@@ -24,3 +25,15 @@ commands =
     ; bare-bones build
     cmake -D CMAKE_INSTALL_PREFIX={env:INSTALL_DIR} {env:GiftGrab_SOURCE_DIR}
     make -j
+    ; no ctest: no features activated to be tested yet
+    make install
+    ; Python and tests (currently all python)
+    cmake -D BUILD_PYTHON=ON -D BUILD_TESTS=ON .
+    make -j
+    ; no ctest: no features activated to be tested yet
+    make install
+    ; HEVC support
+    cmake -D USE_HEVC=ON .
+    make -j
+    ctest
+    make install
