Issue #42: added the rest of linux CI script to tox

--- a/tox.ini
+++ b/tox.ini
@@ -37,3 +37,44 @@ commands =
     make -j
     ctest
     make install
+    ; HEVC support with x265
+    cmake -D ENABLE_GPL=ON -D USE_X265=ON .
+    make -j
+    ctest
+    make install
+    ; turn x265 off explicitly for combination testing
+    cmake -D ENABLE_GPL=OFF -D USE_X265=OFF .
+    ; hardware-accelerated HEVC
+    cmake -D ENABLE_NONFREE=ON -D USE_NVENC=ON .
+    make -j
+    ctest
+    make install
+    ; Xvid support (OpenCV should get switched here)
+    cmake -D USE_XVID=ON .
+    make -j
+    ctest
+    make install
+    ; VP9 support
+    cmake -D USE_VP9=ON .
+    make -j
+    ; not executing VP9 tests due to issue #189
+    ctest -E Test_VP9
+    make install
+    ; NumPy support
+    cmake -D USE_NUMPY=ON .
+    make -j
+    ; not executing VP9 tests due to issue #189
+    ctest -E Test_VP9
+    make install
+    ; test support for video files
+    cmake -D USE_FILES=ON .
+    make -j
+    ; not executing VP9 tests due to issue #189
+    ctest -E Test_VP9
+    make install
+    ; build docs
+    cmake -D BUILD_DOC=ON .
+    make -j
+    ; no ctest: only checking whether doc building
+    ; properly here
+    make install
