Issue #42: using Boost built against Python 3.5 for py35 tox call

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ variables:
   CI_SCRIPTS_DIR: "./ci"
   SCRATCH_DIR: "/home/gitlab-runner/giftgrab-scratch"
   CTEST_OUTPUT_ON_FAILURE: "1"
+  BOOST_ROOT_163_PY35: "/home/gitlab-runner/environments/giftgrab/usr/local/include"
 
 before_script:
   - export REVHASH=$(git rev-parse --short HEAD)
@@ -31,7 +32,7 @@ build-py27:
 build-py35:
   stage: offline
   script:
-    - tox -e py35
+    - BOOST_ROOT=$BOOST_ROOT_163_PY35 tox -e py35
   tags:
     - gift-adelie
 
