--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ whitelist_externals =
 passenv =
     GiftGrab_SOURCE_DIR
     SCRATCH_DIR
+    BOOST_ROOT
 setenv =
     GiftGrab_BUILD_DIR = {env:SCRATCH_DIR}/build/{envname}
     INSTALL_DIR = {env:SCRATCH_DIR}/install/{envname}
@@ -22,6 +23,7 @@ commands =
     echo {env:GiftGrab_SOURCE_DIR}
     echo {env:SCRATCH_DIR}
     echo {env:GiftGrab_BUILD_DIR}
+    echo {env:BOOST_ROOT}
     ; bare-bones build
     cmake -D CMAKE_INSTALL_PREFIX={env:INSTALL_DIR} {env:GiftGrab_SOURCE_DIR}
     make -j
