Issue #42: using empty envvar for Boost root when using default in tox py27 call

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,7 @@ stages:
 build-py27:
   stage: offline
   script:
+    - export BOOST_ROOT=""  # otherwise tox complains!
     - tox -e py27
   tags:
     - gift-adelie
