Issue #42: added a numpy dep to tox config

--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ changedir = {env:GiftGrab_BUILD_DIR}
 deps =
     pytest
     numpy
+    scipy
 commands =
     ; bare-bones build
     cmake -D CMAKE_INSTALL_PREFIX={env:INSTALL_DIR} {env:GiftGrab_SOURCE_DIR}
