Issue #42: quick hack to see whether the libvpx problem is related to the PythonLibs version mismatch

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,7 @@ build-py35:
   stage: offline
   script:
     - export BOOST_ROOT="/home/gitlab-runner/environments/giftgrab/usr/local/include"
+    - sed -i 's/2\.7/3\.5/g' src/cmake/pythonlibs/CMakeLists.txt
     - tox -e py35
   tags:
     - gift-adelie
