Issue #9: activated newly added profiling app in CMake

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -74,3 +74,6 @@ endif(USE_FILES)
 
 # VideoSourceFactory leak checker
 ADD_SUBDIRECTORY(videosourcefactory)
+
+# Simple colour space conversion profiling
+ADD_SUBDIRECTORY(rgbswap)
