Issue #46: conversion profiler now supports reading an image and also saving the result of FFmpeg conversion

--- a/src/tests/rgbswap/CMakeLists.txt
+++ b/src/tests/rgbswap/CMakeLists.txt
@@ -4,8 +4,11 @@ ADD_EXECUTABLE(
     ${CMAKE_SOURCE_DIR}/tests/rgbswap/profile_argb_to_bgra.cpp
 )
 if(USE_FFMPEG)
-    SET(ARGB_TO_BGRA_PROFILER_LIBS ${FFmpeg_LIBS})
+    LIST(APPEND ARGB_TO_BGRA_PROFILER_LIBS ${FFmpeg_LIBS})
 endif(USE_FFMPEG)
+if(USE_OPENCV)
+    LIST(APPEND ARGB_TO_BGRA_PROFILER_LIBS ${OpenCV_LIBS})
+endif(USE_OPENCV)
 TARGET_LINK_LIBRARIES(
     ${ARGB_TO_BGRA_PROFILER} ${ARGB_TO_BGRA_PROFILER_LIBS}
 )
