--- a/src/tests/rgbswap/CMakeLists.txt
+++ b/src/tests/rgbswap/CMakeLists.txt
@@ -1,14 +1,14 @@
-SET(ARGB_TO_BGRA_PROFILER argb_to_bgra_profiler)
+SET(RGB_TO_BGRA_PROFILER rgb_to_bgra_profiler)
 ADD_EXECUTABLE(
-    ${ARGB_TO_BGRA_PROFILER}
-    ${CMAKE_SOURCE_DIR}/tests/rgbswap/profile_argb_to_bgra.cpp
+    ${RGB_TO_BGRA_PROFILER}
+    ${CMAKE_SOURCE_DIR}/tests/rgbswap/profile_rgb_to_bgra.cpp
 )
 if(USE_FFMPEG)
-    LIST(APPEND ARGB_TO_BGRA_PROFILER_LIBS ${FFmpeg_LIBS})
+    LIST(APPEND RGB_TO_BGRA_PROFILER_LIBS ${FFmpeg_LIBS})
 endif(USE_FFMPEG)
 if(USE_OPENCV)
-    LIST(APPEND ARGB_TO_BGRA_PROFILER_LIBS ${OpenCV_LIBS})
+    LIST(APPEND RGB_TO_BGRA_PROFILER_LIBS ${OpenCV_LIBS})
 endif(USE_OPENCV)
 TARGET_LINK_LIBRARIES(
-    ${ARGB_TO_BGRA_PROFILER} ${ARGB_TO_BGRA_PROFILER_LIBS}
+    ${RGB_TO_BGRA_PROFILER} ${RGB_TO_BGRA_PROFILER_LIBS}
 )
