--- a/src/cmake/pythonlibs/CMakeLists.txt
+++ b/src/cmake/pythonlibs/CMakeLists.txt
@@ -1,9 +1,12 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.2.0)
 
-FIND_PACKAGE(PythonLibs 2.7 REQUIRED)
+FIND_PACKAGE(PythonLibs REQUIRED)
 SET(PYTHON_INCLUDE_DIRS ${PYTHON_INCLUDE_DIRS}
     CACHE INTERNAL "PythonLibs include dirs"
 )
 SET(PYTHON_LIBRARIES ${PYTHON_LIBRARIES}
     CACHE INTERNAL "PythonLibs libraries"
+)
+SET(PYTHONLIBS_VERSION_STRING ${PYTHONLIBS_VERSION_STRING}
+    CACHE INTERNAL "PythonLibs version string"
 )
