Issue #42: custom Boost.Python discovery based on Python version

--- a/src/cmake/boost.python/CMakeLists.txt
+++ b/src/cmake/boost.python/CMakeLists.txt
@@ -1,6 +1,15 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.2.0)
 
-SET(GG_BOOST_COMPONENTS python)
+if(NOT PYTHONLIBS_VERSION_STRING)
+    MESSAGE(FATAL_ERROR "Could not determine Python version")
+endif()
+if(PYTHONLIBS_VERSION_STRING MATCHES ^3\.*)
+    SET(GG_BOOST_COMPONENTS python3)
+elseif(PYTHONLIBS_VERSION_STRING MATCHES ^2\.7\.*)
+    SET(GG_BOOST_COMPONENTS python)
+else()
+    MESSAGE(FATAL_ERROR "Found unsupported Python version ${PYTHONLIBS_VERSION_STRING}")
+endif()
 if(USE_NUMPY)
     LIST(APPEND GG_BOOST_COMPONENTS numpy)
 endif(USE_NUMPY)
