--- a/src/cmake/boost.python/CMakeLists.txt
+++ b/src/cmake/boost.python/CMakeLists.txt
@@ -4,14 +4,16 @@ if(NOT PYTHONLIBS_VERSION_STRING)
     MESSAGE(FATAL_ERROR "Could not determine Python version")
 endif()
 if(PYTHONLIBS_VERSION_STRING MATCHES ^3\.*)
-    SET(GG_BOOST_COMPONENTS python3)
+    SET(GG_BOOST_PYTHON_SUFFIX 3)
 elseif(PYTHONLIBS_VERSION_STRING MATCHES ^2\.7\.*)
-    SET(GG_BOOST_COMPONENTS python)
+    SET(GG_BOOST_PYTHON_SUFFIX "")
 else()
     MESSAGE(FATAL_ERROR "Found unsupported Python version ${PYTHONLIBS_VERSION_STRING}")
 endif()
+
+SET(GG_BOOST_COMPONENTS python${GG_BOOST_PYTHON_SUFFIX})
 if(USE_NUMPY)
-    LIST(APPEND GG_BOOST_COMPONENTS numpy)
+    LIST(APPEND GG_BOOST_COMPONENTS numpy${GG_BOOST_PYTHON_SUFFIX})
 endif(USE_NUMPY)
 FIND_PACKAGE(Boost COMPONENTS ${GG_BOOST_COMPONENTS} REQUIRED)
 SET(Boost_INCLUDE_DIR ${Boost_INCLUDE_DIR}
