Issue #42: rearranged PYTHONPATH setting of tests to force use of libraries from build dir

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 # to avoid copying stuff around
-SET(PYTHONPATH "${CMAKE_BINARY_DIR}:$ENV{PYTHONPATH}")
+SET(PYTHONPATH "${CMAKE_SOURCE_DIR}/tests:$ENV{PYTHONPATH}")
 SET(PYTHONPATH "${CMAKE_SOURCE_DIR}/python/modules:${PYTHONPATH}")
-SET(PYTHONPATH "${CMAKE_SOURCE_DIR}/tests:${PYTHONPATH}")
+SET(PYTHONPATH "${CMAKE_BINARY_DIR}:${PYTHONPATH}")
 
 # Obtain Catch header for testing
 SET(CATCH_DIR "${CMAKE_BINARY_DIR}/extern/Catch")
