Issue #50: passing BOOST_ROOT explicitly to CMake to force use of specific version

--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ commands =
     ; no ctest: no features activated to be tested yet
     make install
     ; Python and tests (currently all python)
-    cmake -D BUILD_PYTHON=ON -D BUILD_TESTS=ON .
+    cmake -D BOOST_ROOT={env:BOOST_ROOT} -D BUILD_PYTHON=ON -D BUILD_TESTS=ON .
     make -j
     ; no ctest: no features activated to be tested yet
     make install
