Issue #42: moved tox.ini to ci folder

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ build-py27:
     - export BOOST_ROOT=""  # otherwise tox complains!
     # force use of Python 2.7 libs
     - sed -i 's:PythonLibs REQUIRED:PythonLibs 2.7 REQUIRED:g' src/cmake/pythonlibs/CMakeLists.txt
-    - tox -e py27
+    - tox -c ci/build.tox.ini -e py27
   tags:
     - gift-adelie
 
@@ -40,7 +40,7 @@ build-py35:
     - export BOOST_ROOT="/home/gitlab-runner/environments/giftgrab/install/boost"
     # force use of Python 3 libs
     - sed -i 's:PythonLibs REQUIRED:PythonLibs 3 REQUIRED:g' src/cmake/pythonlibs/CMakeLists.txt
-    - tox -e py35
+    - tox -c ci/build.tox.ini -e py35
   tags:
     - gift-adelie
 
