--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -467,6 +467,7 @@ blackmagic-decklink-sdi-4k:
     - 23-support-for-blackmagic-decklink-4k-extreme-12g
     - 20-support-for-capturing-bgra-frames-with-blackmagic-devices
     - 14-unable-to-free-blackmagic-video-source
+    - 5-support-for-3d-capture-on-blackmagic-cards
 
 ################## Device: Blackmagic DeckLink 4K Extreme 12G ##################
 pypi-blackmagic-decklink-4k-extreme-12g:
@@ -511,6 +512,7 @@ pypi-blackmagic-decklink-4k-extreme-12g:
     - 20-support-for-capturing-bgra-frames-with-blackmagic-devices
     - 32-videosourcefactory-destructor-does-not-free-all-devices
     - 14-unable-to-free-blackmagic-video-source
+    - 5-support-for-3d-capture-on-blackmagic-cards
 
 blackmagic-decklink-4k-extreme-12g:
   stage: test_cmake
