--- a/src/tests/blackmagic/CMakeLists.txt
+++ b/src/tests/blackmagic/CMakeLists.txt
@@ -54,6 +54,15 @@ foreach(BLACKMAGIC_DEVICE ${BLACKMAGIC_DEVICES})
             COMMAND py.test --device=${BLACKMAGIC_DEVICE} --colour-space=${COLOUR_SPACE} --frame-rate=${FRAME_RATE} --observers=3 test_observer.py
         )
         LIST(APPEND TESTS_LIST ${NAME_TEST})
+
+        # Blackmagic device supporting stereo (3D) video streams
+        if(BLACKMAGIC_DEVICE STREQUAL DeckLink4KExtreme12G)
+            SET(NAME_TEST Test_Blackmagic_${BLACKMAGIC_DEVICE}_StereoFrames_${COLOUR_SPACE})
+            ADD_TEST(NAME ${NAME_TEST}
+                COMMAND py.test --device=${BLACKMAGIC_DEVICE} --colour-space=${COLOUR_SPACE} test_stereo.py
+            )
+            LIST(APPEND TESTS_LIST ${NAME_TEST})
+        endif()
     endforeach(COLOUR_SPACE)
 endforeach(BLACKMAGIC_DEVICE)
 
