--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -173,6 +173,10 @@ pypi:
     - pip install numpy
     - $TEST_LAUNCHER numpy bgra; exit_on_fail
     - $TEST_LAUNCHER numpy i420; exit_on_fail
+    # Runt stereo frame tests
+    - $TEST_LAUNCHER stereo bgra; exit_on_fail
+    - $TEST_LAUNCHER stereo i420; exit_on_fail
+    - $TEST_LAUNCHER stereo uyvy; exit_on_fail
     # test support for video files
     - pip install -vvv --install-option="--hevc" --install-option="--enable-nonfree" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--numpy" --install-option="--files" --upgrade "$PyPI_INSTALLER"
     - $TEST_LAUNCHER decode hevc bgra; exit_on_fail
