--- a/ci/pip.tox.ini
+++ b/ci/pip.tox.ini
@@ -9,9 +9,55 @@ passenv =
     GiftGrab_PIP_INSTALLER
     SCRATCH_DIR
     BOOST_ROOT
+    GiftGrab_TEST_LAUNCHER
 deps =
     pytest
     numpy
     scipy
 commands =
     pip install {env:GiftGrab_PIP_INSTALLER}
+    # HEVC support
+    pip install -vvv --install-option="--hevc" --upgrade {env:GiftGrab_PIP_INSTALLER}
+    {env:GiftGrab_TEST_LAUNCHER} encode hevc bgra
+    # HEVC support with x265
+    pip install -vvv --install-option="--hevc" --install-option="--enable-gpl" --install-option="--x265" --upgrade {env:GiftGrab_PIP_INSTALLER}
+    {env:GiftGrab_TEST_LAUNCHER} encode hevc bgra
+    {env:GiftGrab_TEST_LAUNCHER} encode hevc i420
+    # hardware-accelerated HEVC
+    pip install -vvv --install-option="--hevc" --install-option="--enable-nonfree" --install-option="--nvenc" --upgrade {env:GiftGrab_PIP_INSTALLER}
+    {env:GiftGrab_TEST_LAUNCHER} encode hevc bgra
+    {env:GiftGrab_TEST_LAUNCHER} encode hevc i420
+    # Xvid support
+    pip install -vvv --install-option="--hevc" --install-option="--enable-nonfree" --install-option="--nvenc" --install-option="--xvid" --upgrade {env:GiftGrab_PIP_INSTALLER}
+    {env:GiftGrab_TEST_LAUNCHER} encode xvid bgra
+    # VP9 support
+    pip install -vvv --install-option="--hevc" --install-option="--enable-nonfree" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --upgrade {env:GiftGrab_PIP_INSTALLER}
+    # not executing VP9 tests due to issue #189
+    # {env:GiftGrab_TEST_LAUNCHER} encode vp9 bgra
+    # {env:GiftGrab_TEST_LAUNCHER} encode vp9 i420
+    # NumPy support
+    pip install -vvv --install-option="--hevc" --install-option="--enable-nonfree" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--numpy" --upgrade {env:GiftGrab_PIP_INSTALLER}
+    # TODO: delete these five lines after issue #133
+    {env:GiftGrab_TEST_LAUNCHER} encode hevc bgra
+    {env:GiftGrab_TEST_LAUNCHER} encode hevc i420
+    {env:GiftGrab_TEST_LAUNCHER} encode xvid bgra
+    # not executing VP9 tests due to issue #189
+    # {env:GiftGrab_TEST_LAUNCHER} encode vp9 bgra
+    # {env:GiftGrab_TEST_LAUNCHER} encode vp9 i420
+    # Run the actual NumPy tests
+    pip install numpy
+    {env:GiftGrab_TEST_LAUNCHER} numpy bgra
+    {env:GiftGrab_TEST_LAUNCHER} numpy i420
+    # test support for video files
+    pip install -vvv --install-option="--hevc" --install-option="--enable-nonfree" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--numpy" --install-option="--files" --upgrade {env:GiftGrab_PIP_INSTALLER}
+    {env:GiftGrab_TEST_LAUNCHER} decode hevc bgra
+    {env:GiftGrab_TEST_LAUNCHER} decode hevc i420
+    {env:GiftGrab_TEST_LAUNCHER} decode hevc uyvy
+    {env:GiftGrab_TEST_LAUNCHER} decode xvid bgra
+    {env:GiftGrab_TEST_LAUNCHER} decode xvid i420
+    {env:GiftGrab_TEST_LAUNCHER} decode xvid uyvy
+    # not executing VP9 tests due to issue #189
+    # {env:GiftGrab_TEST_LAUNCHER} decode vp9 bgra
+    # {env:GiftGrab_TEST_LAUNCHER} decode vp9 i420
+    # {env:GiftGrab_TEST_LAUNCHER} decode vp9 uyvy
+
