--- a/ci/pip.tox.ini
+++ b/ci/pip.tox.ini
@@ -15,7 +15,9 @@ deps =
     numpy
     scipy
 commands =
-    pip install {env:GiftGrab_PIP_INSTALLER}
+    # TODO: fail check disabled until we find a way
+    # to do this in tox
+    # pip install {env:GiftGrab_PIP_INSTALLER}
     # HEVC support
     pip install -vvv --install-option="--hevc" --upgrade {env:GiftGrab_PIP_INSTALLER}
     {env:GiftGrab_TEST_LAUNCHER} encode hevc bgra
