--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -436,6 +436,8 @@ pypi-blackmagic-decklink-sdi-4k:
     # because pip seems to be getting confused about install options sometimes:
     - pip install PyYAML
     - pip install pytest
+    - pip install numpy
+    - pip install scipy
     - pip install -vvv --install-option="--blackmagic-decklink-sdi-4k" --install-option="--enable-nonfree" --upgrade "$PyPI_INSTALLER"
     # run tests
     - $TEST_LAUNCHER blackmagic-decklinksdi4k uyvy; exit_on_fail
@@ -504,6 +506,8 @@ pypi-blackmagic-decklink-4k-extreme-12g:
     # because pip seems to be getting confused about install options sometimes:
     - pip install PyYAML
     - pip install pytest
+    - pip install numpy
+    - pip install scipy
     - pip install -vvv --install-option="--blackmagic-decklink-4k-extreme-12g" --install-option="--enable-nonfree" --install-option="--numpy" --upgrade "$PyPI_INSTALLER"
     # run tests
     - $TEST_LAUNCHER blackmagic-decklink4kextreme12g uyvy; exit_on_fail
