Issue #66: linking executable with GG lib

--- a/src/sandbox/frame-level-metadata/CMakeLists.txt
+++ b/src/sandbox/frame-level-metadata/CMakeLists.txt
@@ -1,4 +1,5 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.2.0)
 
-ADD_EXECUTABLE(flmd example.cpp)
-
+SET(FLM_APP flmd)
+ADD_EXECUTABLE(${FLM_APP} example.cpp)
+TARGET_LINK_LIBRARIES(${FLM_APP} ${NAME})
