--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -567,3 +567,4 @@ windows:
   only:
     - 73-set-up-ci-build-on-hopper-for-69
     - 69-support-for-epiphan-on-windows-10
+    - 75-build-against-epiphan-sdk-on-windows-10-for-69
