--- a/src/cmake/platform/CMakeLists.txt
+++ b/src/cmake/platform/CMakeLists.txt
@@ -5,5 +5,5 @@ if(APPLE)
     MESSAGE(FATAL_ERROR "This library does not support Mac OS X yet.")
 endif(APPLE)
 if(WIN32)
-    MESSAGE(FATAL_ERROR "This library does not support Windows yet.")
+    MESSAGE(WARNING "Windows support is experimental.")
 endif(WIN32)
