Issue #75: setting C++11 standard globally in CMake

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,8 @@
 PROJECT(GiftGrab)
 CMAKE_MINIMUM_REQUIRED(VERSION 3.2.0)
 
+SET(CMAKE_CXX_STANDARD 11)
+
 # Will be used when installing
 SET(GiftGrab_PATH_SUFFIX giftgrab)
 
